Bake normals for multi-resolution object is broken #96401

Closed
opened 2022-03-13 16:04:13 +01:00 by CHET · 12 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: 3.0.0

Caused by a81cc5cbcb

Already not in the first version, the problem with baking. Once it was fixed, now it has appeared in a new version, stable!
Question to the developers, how do you even fix bugs if old bugs pop up, and why do you release stable versions when they have such critical bugs?! Why don't you test what you release?

Steps to Reproduce

  • Open .blend file and bake image texture
    3.blend
    image.png
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: 3.0.0 Caused by a81cc5cbcb Already not in the first version, the problem with baking. Once it was fixed, now it has appeared in a new version, stable! Question to the developers, how do you even fix bugs if old bugs pop up, and why do you release stable versions when they have such critical bugs?! Why don't you test what you release? **Steps to Reproduce** - Open .blend file and bake image texture [3.blend](https://archive.blender.org/developer/F12925082/3.blend) ![image.png](https://archive.blender.org/developer/F12925084/image.png)
Author

Added subscriber: @cheteron

Added subscriber: @cheteron
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. Bake normals seems not working correctly.
Broke between 9153bf24cb - fcda858e32

Thanks for the report. Bake normals seems not working correctly. Broke between 9153bf24cbf2 - fcda858e3200
Pratik Borhade changed title from Baking bug in 3.1 to Bake normals for multi-resolution object is broken 2022-03-21 08:14:23 +01:00
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Caused by a81cc5cbcb

CC @HooglyBoogly

Caused by a81cc5cbcb CC @HooglyBoogly
Member

This bisect and the "caused by" commit doesn't seem to add up to me. I tried it on 3.0, and when I pressed the "Bake" button, the black texture is replaced by the baked result.
In 3.1, pressing "Bake" does nothing to the texture, it remains black. However, the commit before a81cc5cbcb also has this problem, as does @PratikPB2123's "good" commit, 9153bf24cb.

I tried going further back, but I get build errors after a certain point.

Am I doing something wrong? Do I need to do something besides pressing "Bake"?

This bisect and the "caused by" commit doesn't seem to add up to me. I tried it on 3.0, and when I pressed the "Bake" button, the black texture is replaced by the baked result. In 3.1, pressing "Bake" does nothing to the texture, it remains black. However, the commit before a81cc5cbcb also has this problem, as does @PratikPB2123's "good" commit, 9153bf24cbf2. I tried going further back, but I get build errors after a certain point. Am I doing something wrong? Do I need to do something besides pressing "Bake"?
Member

Okay, it seems the image editor just doesn't update in 3.1, but the bake is still changing the image. Maybe that's another bug? I can reproduce this!

Okay, it seems the image editor just doesn't update in 3.1, but the bake is still changing the image. Maybe that's another bug? I can reproduce this!

This issue was referenced by 07dc383f4b

This issue was referenced by 07dc383f4b19e5a30dd5dced3cda7cd6160cb962

This issue was referenced by 3a8a7d93f9

This issue was referenced by 3a8a7d93f9271935ac28d19b26aff0a671b65551
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-03-21 22:56:26 +01:00
Member

Okay, it seems the image editor just doesn't update in 3.1. Maybe that's another bug

Yes, we have a separate report for it: #96670 (Regression: Blender 3.1 bake from multires not reflected in the Image Editor)

> Okay, it seems the image editor just doesn't update in 3.1. Maybe that's another bug Yes, we have a separate report for it: #96670 (Regression: Blender 3.1 bake from multires not reflected in the Image Editor)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96401
No description provided.